# rust-ffi

./: .gitignore  Bootstrap.ps1  Bootstrap.sh  Cargo.toml  GenerateBindings.bat  GenerateBindings.command  GenerateBindings.sh  GenerateProjectFiles.bat  GenerateProjectFiles.command  GenerateProjectFiles.sh  LICENSE.md  Library.code-workspace  README.md  premake5.lua
Config/: Bindings.toml
Examples/C/: Hello.c  Main.c
Examples/CSharp/: Main.cs  Program.cs
Examples/Cpp/: Hello.cpp  Main.cpp
Examples/Python/: Main.py
Examples/Rust/: Hello.rs
Source/: Allocator.rs  Converter.rs  Library.h  Library.rs
