[package]
name = "Library"
version = "0.0.1"
description = "Rust Library"
repository = "https://github.com/GuilhermeWerner/Libraryr"
authors = ["GuilhermeWerner <guilhermeqwerner@gmail.com>"]
license = "MIT"
edition = "2018"
publish = false

[lib]
name="Library"
crate-type = ["staticlib", "cdylib", "rlib"]
path = "Source/Library.rs"

[dependencies]
libc = "0.2.0"

[[example]]
name="Hello"
path = "Examples/Rust/Hello.rs"
